attempt to fix clipping path flicker on ios

--- a/packages/ui/src/components/w3m-network-image/styles.css
+++ b/packages/ui/src/components/w3m-network-image/styles.css
@@ -13,6 +13,10 @@ svg {
   margin: 0;
 }
 
+image {
+  will-change: transform;
+}
+
 #network-placeholder-fill {
   fill: var(--w3m-color-bg-3);
 }
